# xiaohongshu_mcp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
docs/: ARCHITECTURE.md
scripts/: login.py  run_bot.py  run_http.py  run_mcp.py  test.sh  test_xiaohongshu.py
src/: __init__.py
src/core/: __init__.py  browser_manager.py  llm_client.py  models.py  types.py
src/servers/: __init__.py  http_app.py  mcp_server.py  state.py
src/xiaohongshu/: __init__.py  api.py
src/xiaohongshu/test/: test_feeds_search.py
src/xiaohongshu/worflow/: __init__.py  feed_detail.py  feeds.py  memtions.py
