[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-media-op"
version = "0.1.0"
description = "Social media operations bot with DOM read + fixed workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
browser-use = ["browser-use>=0.1.0"]
scheduler = ["apscheduler>=3.10.0"]

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]
